--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             isAnimated = true;
             gifted1 = true;
-           lia.src = "Anim/Poke3/poke.gif";
+           lia.src = "Anim/Poke3/poke3.gif";
             
             
             setTimeout(() => {
